<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Cal¢</string>
    <string name="menu_settings">Settings</string>
    
    <string name="billTotal">Bill Total</string>
    <string name="tip">Tip</string>
    <string name="custom">Custom</string>
    <string name="total">Total</string>
    <string name="billTotalHintEditText">Enter Bill Amount</string>
    
    <string name="tenPc">10%</string>
    <string name="fifteenPc">15%</string>
    <string name="twentyPc">20%</string>
    <string name="customTip">18%</string>
    <string name="zero">0.00</string>

</resources>